Fix grid gap in Safari

--- a/static/grid.css
+++ b/static/grid.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(4, 1fr);
   row-gap: 1em;
   column-gap: 1em;
+  grid-gap: 1em 1em;
 }
 
 .thumbnail img {
